[gd_scene load_steps=5 format=3 uid="uid://bqf8c3r4uihhx"]

[ext_resource type="Script" path="res://Scripts/potion_maker.gd" id="1_4wung"]
[ext_resource type="PackedScene" uid="uid://bo465k7itivg3" path="res://Scenes/Potion.tscn" id="1_gkpg3"]
[ext_resource type="PackedScene" uid="uid://df0sbv1xfjtla" path="res://Scenes/IngredientButton.tscn" id="3_3n1m5"]
[ext_resource type="PackedScene" uid="uid://b6v4xxtgaxf1m" path="res://Scenes/FormButton.tscn" id="4_8ovmk"]

[node name="PotionMaker" type="Node2D"]
position = Vector2(576, 464)
script = ExtResource("1_4wung")

[node name="Potion" parent="." instance=ExtResource("1_gkpg3")]
position = Vector2(0, -140)
scale = Vector2(0.75, 0.75)

[node name="CyanIngredientButton" parent="." instance=ExtResource("3_3n1m5")]
offset_left = -289.0
offset_top = 8.0
offset_right = -97.0
offset_bottom = 200.0
scale = Vector2(0.75, 0.75)
color = Color(0, 1, 1, 1)

[node name="YellowIngredientButton" parent="." instance=ExtResource("3_3n1m5")]
offset_left = -144.0
offset_top = 8.0
offset_right = 48.0
offset_bottom = 200.0
scale = Vector2(0.75, 0.75)
color = Color(1, 1, 0, 1)

[node name="MagentaIngredientButton" parent="." instance=ExtResource("3_3n1m5")]
offset_left = 2.47955e-05
offset_top = 8.0
offset_right = 192.0
offset_bottom = 200.0
scale = Vector2(0.75, 0.75)
color = Color(1, 0, 1, 1)

[node name="BlackIngredientButton" parent="." instance=ExtResource("3_3n1m5")]
offset_left = 144.0
offset_top = 8.0
offset_right = 336.0
offset_bottom = 200.0
scale = Vector2(0.75, 0.75)
color = Color(0, 0, 0, 1)

[node name="ResetFormButton" parent="." instance=ExtResource("4_8ovmk")]
offset_left = -512.0
offset_top = 64.0
offset_right = -353.0
offset_bottom = 95.0
text = "Jeter la pr√©paration"

[node name="SubmitFormButton" parent="." instance=ExtResource("4_8ovmk")]
offset_left = 352.0
offset_top = 64.0
offset_right = 510.0
offset_bottom = 95.0
text = "Terminer et vendre"

[connection signal="pressed" from="ResetFormButton" to="." method="_on_reset_form_button_pressed"]
[connection signal="pressed" from="SubmitFormButton" to="." method="_on_submit_form_button_pressed"]
